# bladebit

./: .gitattributes  .gitignore  .gitmodules  .repo-content-updater.yml  Bladebit.cmake  BladebitCUDA.cmake  CMakeLists.txt  CMakeSettings.json  Config.cmake  F1CompressToBits  Harvester.cmake  LICENSE  Makefile  NOTICE  README.md  TODO.md  Tests.cmake  VERSION  bladebit.natvis  bladebit.sln  bladebit.vcxproj  bladebit.vcxproj.filters  build-bls  build-cuda.sh  build-harvester.sh  build.sh  embed-version.sh  extract-version.ps1  extract-version.sh  flake.nix  project.js  pyproject.toml  setup.py  strip-debug-symbols.sh  symbolicate-crash.sh  symbolicate_crash.sh  sync
.github/actions/: artifacts.js  artifacts.mjs  build-asset-linux.sh  build-asset-unix.sh  build-harvester-linux.sh  build-harvester.sh  check-elf-gnu-stack-flags.sh  get-artifact.js  get-version.sh  install-cmake-linux.sh
.github/workflows/: attach-release-assets.yml  build-harvester.yml  build-release-windows.yml  build-release.yml  build-release.yml.disabled  build-wheels.yml  codeql-analysis.yml  super-linter.yml
builds/linux/: debug.arm.mk  debug.arm.test.mk  debug.mk  debug.test.mk  release.arm.mk  release.arm.test.mk  release.mk  release.test.mk
builds/macos/: debug.arm.mk  debug.arm.test.mk  debug.mk  debug.test.mk  release.arm.mk  release.arm.test.mk  release.mk  release.test.mk
builds/win32/: debug.arm.mk  debug.arm.test.mk  debug.mk  debug.test.mk  release.arm.mk  release.arm.test.mk  release.mk  release.test.mk
cmake_modules/: EmbedVersion.cmake  FindBLS.cmake  FindCatch2.cmake  FindNUMA.cmake  FindNuma.cmake  Findbls.cmake  Findgmp.cmake  Findrelic.cmake
cuda/: CudaF1.cu  CudaF1.h  CudaFSE.cuh  CudaFx.h  CudaMatch.cu  CudaMatch.h  CudaParkSerializer.cu  CudaParkSerializer.h  CudaPlotConfig.h  CudaPlotContext.h  CudaPlotPhase2.cu  CudaPlotPhase3.cu  CudaPlotPhase3Internal.h  CudaPlotPhase3Step2.cu  CudaPlotPhase3Step3.cu  CudaPlotUtil.cu  CudaPlotter.cu  CudaPlotter.h  CudaUtil.h  FxCuda.cu  GpuDownloadStream.cu  GpuQueue.cu  GpuQueue.h  GpuStreams.cu  GpuStreams.h  MatchCuda.cu  chacha8.cu
cuda/harvesting/: CudaThresher.cu  CudaThresherDummy.cpp  CudaThresherFactory.cu
src/: BLS.h  ChiaConsts.h  Config.h  Globals.h  Platform.h  PlotContext.cpp  PlotContext.h  PlotWriter.cpp  PlotWriter.h  SysHost.cpp  SysHost.h  Types.h  Util.cpp  Util.h  Version.h  View.h  main.cpp  main_old.h  pch.h
src/algorithm/: RadixSort.h  YSort.cpp  YSort.h
src/b3/: blake3.c  blake3.h  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx2_x86-64_windows_gnu.S  blake3_avx2_x86-64_windows_msvc.asm  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_avx512_x86-64_windows_gnu.S  blake3_avx512_x86-64_windows_msvc.asm  blake3_dispatch.c  blake3_impl.h  blake3_neon.c  blake3_portable.c  blake3_sse41.c  blake3_sse41_x86-64_unix.S  blake3_sse41_x86-64_windows_gnu.S  blake3_sse41_x86-64_windows_msvc.asm
src/bech32/: segwit_addr.c  segwit_addr.h
src/commands/: CmdCheckCUDA.cpp  CmdPlotCheck.cpp  CmdPlotCheckInternal.h  CmdSimulator.cpp  Commands.h  PlotCheck.cpp
src/diskplot/: DiskBufferQueue.cpp  DiskBufferQueue.h  DiskPlotConfig.h  DiskPlotContext.h  DiskPlotDebug.cpp  DiskPlotDebug.h  DiskPlotPhase1.cpp  DiskPlotPhase1.h  DiskPlotPhase2.cpp  DiskPlotPhase2.h  DiskPlotPhase3.cpp  DiskPlotPhase3.h  DiskPlotter.cpp  DiskPlotter.h  Fence.cpp  Fence.h  FileBlockRemainder.h  FileId.h  main_diskplot.cpp
src/fse/: LICENSE  README.md  bitstream.h  commit  compiler.h  debug.c  debug.h  entropy_common.c  error_private.h  error_public.h  fse.h  fse_compress.c  fse_decompress.c  hist.c  hist.h  huf.h  mem.h
src/harvesting/: GreenReaper.cpp  GreenReaper.h  GreenReaperInternal.h  GreenReaperPortable.h  HarvesterDummy.cpp  Thresher.h
src/io/: BucketStream.cpp  BucketStream.h  FileStream.cpp  FileStream.h  HybridStream.cpp  HybridStream.h  IOUtil.cpp  IOUtil.h  IStream.h  MemoryStream.h
src/memplot/: CTables.h  DbgHelper.cpp  DbgHelper.h  FxSort.h  LPGen.h  MemPhase1.cpp  MemPhase1.h  MemPhase2.cpp  MemPhase2.h  MemPhase3.cpp  MemPhase3.h  MemPhase4.cpp  MemPhase4.h  MemPlotter.cpp  MemPlotter.h  ParkWriter.h
src/plot128/: Plot128Context.h  Plot128Phase1.cpp  Plot128Phase1.h  Plotter128.cpp  Plotter128.h  main_128.cpp
src/plotdisk/: BitBucketWriter.h  BlockWriter.h  DiskBufferQueue.cpp  DiskBufferQueue.h  DiskF1.h  DiskFp.h  DiskFxGen.h  DiskPairReader.h  DiskPlotBounded.cpp  DiskPlotBounded.h  DiskPlotConfig.h  DiskPlotContext.h  DiskPlotDebug.cpp  DiskPlotDebug.h  DiskPlotInfo.h  DiskPlotPhase1.cpp  DiskPlotPhase1.h  DiskPlotPhase1C.cpp  DiskPlotPhase2.cpp  DiskPlotPhase2.cpp.disabled  DiskPlotPhase2.h  DiskPlotPhase3.cpp  DiskPlotPhase3.cpp.disabled  DiskPlotPhase3.h  DiskPlotter.cpp  DiskPlotter.h  FileBlockRemainder.cpp  FileBlockRemainder.h  FileId.h  FpFxGen.h  FpGroupMatcher.h  IOTransforms.h  MapWriter.h  main_diskplot.h
src/plotmem/: DbgHelper.cpp  DbgHelper.h  LPGen.h  MemPhase1.cpp  MemPhase2.cpp  MemPhase3.cpp  MemPhase3.h  MemPhase4.cpp  MemPhase4.h  MemPlotter.cpp  MemPlotter.h  ParkWriter.h
src/plotshared/: DoubleBuffer.h  GenSortKey.h  MTJob.h  PlotTools.cpp  PlotTools.h  PlotTypes.h  SPCQueue.h  SPCQueue.inl  TableWriter.cpp  TableWriter.h  Tables.h  WorkHeap.cpp  WorkHeap.h
src/plotting/: BufferChain.cpp  BufferChain.h  CTables.h  Compression.cpp  Compression.h  DTables.h  DiskBucketBuffer.cpp  DiskBucketBuffer.h  DiskBuffer.cpp  DiskBuffer.h  DiskBufferBase.cpp  DiskBufferBase.h  DiskQueue.cpp  DiskQueue.h  FSETableGenerator.cpp  FSETableGenerator.h  GenSortKey.h  GlobalPlotConfig.h  IPlotter.h  MTJob.h  PackEntries.cpp  PackEntries.h  PlotHeader.h  PlotTools.cpp  PlotTools.h  (+9 more)
test/: checker.py
tests/: TestAddressesAndKeys.cpp  TestBucketSliceRead.cpp  TestBucketStream.cpp  TestCompressToBits.cpp  TestCompressedPlotProof.cpp  TestDiskF1.cpp  TestDiskFx.cpp  TestDiskQueue.cpp  TestF1GenBucketized.cpp  TestFxGenBucketized.cpp  TestFxSort.cpp  TestLinePointDeltas.cpp  TestMacOSThreads.cpp  TestPairAndMap.cpp  TestPlotWriter.cpp  TestSPCQueue.cpp  TestUtil.h  TestUtils.h  TestXchAddressData.h
(+101 files in other folders)
